Fix T45204: String Splitting Function Bug: Using OpenEXR function even if compiled without OpenEXR.

Seriously!!!

Also, fix a potential buffer overrun here.

This should be backported to final release.